Fixed some responsive issues. Added blurred background to media query using png instead of filter as couldn't figure alternative.

--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,7 @@ h1,h2,h3,h4,h5,h6 {
     height: 100vh;
     box-sizing: border-box;
     justify-items: center;
+    align-self:flex-start;
 }
 
 #logo {
@@ -67,7 +68,9 @@ h1,h2,h3,h4,h5,h6 {
     width: 420px;
     box-sizing: border-box;
     align-self: flex-end;
-    margin: 4rem;
+    margin-left: 2rem;
+    margin-right: 2rem;
+    margin-bottom: 4rem;
 }
 
 .alreadyMember {
@@ -82,24 +85,22 @@ form {
     font-family: Barlow;
     font-size: large;
     font-weight:200;
-    width: 100%;
     gap: 1rem;
     align-self: center;
+    margin: 1rem;
 }
 
 label {
     grid-column: 1 / 2;
     padding:0.5rem;
-    min-width:max-content;
     text-align: end;
 }
  
 input {
     height:1.5rem;
     grid-column: 2 / 3;
-    width: 100%;
-    min-width: 10rem;
 }
+
 button {
     grid-column: 1 / 3;
     justify-self: center;
@@ -130,7 +131,7 @@ input {
 @media only screen and (max-width: 800px) {
     .container{
         grid-template-columns: 1fr;
-        background-image: linear-gradient(rgba(0,0,0,0.9), rgba(0,0,0,.8)), url(/images/NYC.png);
+        background-image: linear-gradient(rgba(0,0,0,0.7), rgba(0,0,0,1)), url(/images/NYCb.png);
         background-position: center top;
         background-repeat: no-repeat;
     }
@@ -141,5 +142,9 @@ input {
 
     #logo {
         left:0%;
-}
+    }
+
+    .sectionR {
+    height:auto;
+    }
 }
